[gd_scene load_steps=5 format=3 uid="uid://wbk7n65x81du"]

[ext_resource type="LabelSettings" uid="uid://ce0fbi4ha5uyg" path="res://scenes/screens/VersusTextSetting.tres" id="1_s5vpy"]
[ext_resource type="Script" path="res://scripts/view/player_list_item.gd" id="1_v8q1l"]
[ext_resource type="Texture2D" uid="uid://b747vyu1rfuoo" path="res://resources/pixel.png" id="2_gu3n3"]
[ext_resource type="Image" uid="uid://la8v830603a0" path="res://resources/pixel_image.png" id="2_kgtxd"]

[node name="PlayerListItem" type="HBoxContainer"]
script = ExtResource("1_v8q1l")
color_icon = ExtResource("2_kgtxd")

[node name="KickButton" type="Button" parent="."]
layout_mode = 2
text = "-"

[node name="ColorSelect" type="OptionButton" parent="."]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "Test1"
popup/item_0/id = 0
popup/item_1/text = "Test2"
popup/item_1/icon = ExtResource("2_gu3n3")
popup/item_1/id = 1
popup/item_2/text = "Test3"
popup/item_2/id = 2

[node name="Username" type="Label" parent="."]
layout_mode = 2
text = "Sapphirewhale test longer"
label_settings = ExtResource("1_s5vpy")

[connection signal="pressed" from="KickButton" to="." method="leave_game"]
[connection signal="item_selected" from="ColorSelect" to="." method="_on_ColorSelect_item_selected"]
